# wifui

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
manifests/s/sohamw03/wifui/0.1.0/: sohamw03.wifui.installer.yaml  sohamw03.wifui.locale.en-US.yaml  sohamw03.wifui.yaml
src/: app.rs  config.rs  error.rs  event.rs  input.rs  main.rs  theme.rs  ui.rs  wifi.rs
src/event/: handlers.rs  mod.rs
src/wifi/: connection.rs  handle.rs  listener.rs  mod.rs  profile.rs  scanning.rs  types.rs
wix/: main.wxs
